[package]
name = "websocket-server"
version = "0.1.0"
authors = ["Antoine Latrille <antoine.latrille@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = { version = "3" }
openssl = { version = "0.10.32", features = ["v110"] }